# AxHost-Portal-Cli

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
axhost_cli/: __init__.py  __main__.py  completer.py  config.py  main.py  models.py  shell.py
axhost_cli/api/: __init__.py  client.py
axhost_cli/services/: __init__.py  auth.py  batch_sync.py  project.py  upload.py
axhost_cli/ui/: __init__.py  interactive.py  widgets.py
